<?xml version="1.0"?>
<package format="2">
    <name>smpl_ztp</name>
    <version>0.0.0</version>
    <description>The smpl_ztp library</description>
    <author email="TODO@TODO.com">Fahad Islam</author>
    <maintainer email="TODO@TODO.com">Fahad Islam</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>boost</depend>
    <depend>eigen</depend>
    <depend>eigen_conversions</depend>
    <depend>leatherman</depend>
    <depend>roscpp</depend>
    <depend>sbpl_kdl_robot_model</depend>
    <depend>smpl</depend>
    <depend>smpl_ros</depend>
    <depend>smpl_moveit_interface</depend>
    <depend>moveit_ros_planning</depend>
    <depend>moveit_ros_planning_interface</depend>
    <depend>trajectory_msgs</depend>
    <depend>moveit_msgs</depend>
    <!--depend>sbpl</depend-->
</package>
